[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://space.png" type="Texture" id=2]
[ext_resource path="res://UFO.tscn" type="PackedScene" id=3]
[ext_resource path="res://song.ogg" type="AudioStream" id=4]
[ext_resource path="res://Unique.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 520.061, 322.047 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 86
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="space" type="Sprite" parent="Sprite"]
position = Vector2( 512.218, 344.129 )
texture = ExtResource( 2 )

[node name="UFO" parent="." instance=ExtResource( 3 )]
position = Vector2( 367.486, 279.967 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 512.637, 297.329 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AmbientSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 14.0
margin_top = 12.0
margin_right = 238.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 2 )

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 284.039
margin_top = 201.257
margin_right = 730.039
margin_bottom = 402.257
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "GAME OVER!"
align = 1
valign = 1
autowrap = true
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
